@@ -1,21 +1,21 @@
 /* ==================================================================
  * JdbcUserFluxDefaultAggregatePublishConfigurationDao.java - 25/06/2024 10:47:54 am
- * 
+ *
  * Copyright 2024 SolarNetwork.net Dev Team
- * 
- * This program is free software; you can redistribute it and/or 
- * modify it under the terms of the GNU General Public License as 
- * published by the Free Software Foundation; either version 2 of 
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of
  * the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, 
- * but WITHOUT ANY WARRANTY; without even the implied warranty of 
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU 
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License 
- * along with this program; if not, write to the Free Software 
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
  * 02111-1307 USA
  * ==================================================================
  */
@@ -36,7 +36,7 @@ import net.solarnetwork.domain.SortDescriptor;
 /**
  * JDBC implementation of
  * {@link UserFluxDefaultAggregatePublishConfigurationDao}.
- * 
+ *
  * @author matt
  * @version 1.0
  */
@@ -75,7 +75,7 @@ public class JdbcUserFluxDefaultAggregatePublishConfigurationDao
 	public UserFluxDefaultAggregatePublishConfiguration get(Long id) {
 		var sql = new SelectUserFluxDefaultAggregatePublishConfiguration(id);
 		var results = jdbcOps.query(sql, UserFluxDefaultAggregatePublishConfigurationRowMapper.INSTANCE);
-		return (!results.isEmpty() ? results.get(0) : null);
+		return (!results.isEmpty() ? results.getFirst() : null);
 	}
 
 	@Override
